# ontology_backend

./: .env  .env.example  PHASE1_SUMMARY.md  PHASE2_SUMMARY.md  README.md  main.py  pyproject.toml  test_pipeline.py
app/agents/: __init__.py  chat_agent.py  log_parser.py  ontology_query.py  pipeline.py  reasoning.py  report.py  similar_case.py
app/api/routes/: __init__.py  analysis.py  chat.py  history.py
app/core/: __init__.py  config.py  storage.py
app/db/: __init__.py  milvus_client.py  neo4j_client.py
app/models/: __init__.py  analysis.py  report.py
app/ontology/: __init__.py  schema.py
app/ontology/seed/: mysql.cypher  postgres.cypher
app/services/: analysis_service.py
