[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepagents>=0.5.7",
    "langchain>=1.2.17",
    "langchain-openai>=1.2.1",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "python-multipart>=0.0.20",
    "neo4j>=5.28",
    "pymilvus>=2.5",
    "langchain-anthropic>=0.3",
    "pydantic-settings>=2.0",
    "sse-starlette>=2.2",
    "markdown>=3.7",
]
